# payment-risk-scoring-system

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.simple  Dockerfile.working  LICENSE  Makefile  README.md  config.py  deploy-render.sh  deploy.bat  deploy.sh  docker-compose.yml  fix_metrics.py  nixpacks.toml  pyproject.toml  quick_cf_check.py  railway-api.sh  railway-dashboard.sh  railway-dashboard.toml  railway-start.py  railway.json  railway.toml  render.yaml  requirements-api.txt  requirements-basic.txt  requirements-dashboard.txt  requirements-minimal.txt  requirements-railway.txt  requirements-render.txt  requirements.txt  setup.py  setup_project.py  start.sh  start_dashboard_railway.py  test_api.py  validate_template.py  vercel.json
app/: main.py  main_simple.py  models.py  monitoring.py  predictor.py  railway_start.py  start_api.py
config/: config.py
dashboard/: app.py  app_simple.py  components.py  requirements.txt
data/processed/: data_summary.txt  pipeline_test_report.txt  test_processed_data.csv
deployment/cloudformation/: FIXES_APPLIED.md  README.md  deploy.ps1  deploy.sh  fraud-detection-stack.yaml  parameters.env
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: AML_COMPLIANCE.md  API.md  ARCHITECTURE.md  AWS_DEPLOYMENT_GUIDE.md  BLOG_POST_OUTLINE.md  CODE_CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FREE_TIER_DEPLOYMENT.md  GETTING_STARTED.md  INTERVIEW_PREPARATION.md  PERFORMANCE.md  PORTFOLIO_GUIDE.md  PROJECT_CLOSURE_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  RENDER_VERCEL_DEPLOYMENT.md  TRANSFORMATION_SUMMARY.md  project-brief.md
docs/brownfield-architecture/: api-design-and-integration.md  checklist-results-report.md  coding-standards-and-conventions.md  component-architecture.md  data-models-and-schema-changes.md  enhancement-scope-and-integration-strategy.md  index.md  infrastructure-and-deployment-integration.md  introduction.md  next-steps.md  security-integration.md  source-tree-integration.md  tech-stack-alignment.md  testing-strategy.md
docs/prd/: epic-and-story-structure.md  index.md  (+3 more)
models/: model_metadata.json  training_report_20250816_190149.txt
nginx/: nginx.cnf
notebooks/: 01_EDA.py  02_Model_Evaluation.py
reports/: evaluation_report.txt  evaluation_results.json  model_performance_report.txt  model_test_summary.txt
scripts/: deploy_docker.py  deploy_railway.py  example_client.py  fix_import.py  fix_unicode_error.py  train_fraud_model.py  validate_defensible_metrics.py  validate_free_tier.py
src/: aml_compliance.py  data_pipeline.py  evaluation.py  feature_engineering.py  model_training.py  utils.py  velocity_monitoring.py
tests/: test_aml_compliance.py  test_api.py  test_complete_pipeline.py  test_minimal.py  test_models_fixed.py  test_trained_model.py  test_velocity_monitoring.py
(+16 files in other folders)
