[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# Pyright/Pylance configuration
[tool.pyright]
include = ["src", "app", "notebooks", "tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/venv",
    ".git",
    "build",
    "dist"
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoSearchPaths = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--ignore=docs",
    "--ignore=build",
    "--ignore=dist",
]

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (for X, X_train, etc.)
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "C0301",  # Line too long (handled by black)
    "C0303",  # Trailing whitespace (handled by black)
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "W0611",  # Unused import (during development)
    "W1203",  # Use lazy % formatting in logging
]
max-line-length = 100
good-names = ["i", "j", "k", "X", "y", "df", "ax", "fig", "e", "f", "n"]

[tool.pylint.design]
max-args = 7
max-locals = 20
max-branches = 15
max-statements = 60

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true